# spew

./: .gitignore  AUTHORS  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  bootstrap  builder.sh  config.h.in  configure  configure.ac
config/: mkinstalldirs
etc/: Makefile.am  Makefile.in  spew.conf
man/: Makefile.am  Makefile.in  spew.1.in  spew.1.include
src/: BytePatternTransfer.cpp  BytePatternTransfer.h  CumulativeStatistics.cpp  CumulativeStatistics.h  CumulativeStatisticsReadOnly.cpp  CumulativeStatisticsReadOnly.h  CumulativeStatisticsReadWrite.cpp  CumulativeStatisticsReadWrite.h  GarbageTransfer.cpp  GarbageTransfer.h  Job.cpp  Job.h  JobStatistics.cpp  JobStatistics.h  JobStatisticsReadOnly.cpp  JobStatisticsReadOnly.h  JobStatisticsReadWrite.cpp  JobStatisticsReadWrite.h  Log.cpp  Log.h  Makefile.am  Makefile.in  NumbersTransfer.cpp  NumbersTransfer.h  Random.cpp  Random.h  RandomTransfer.cpp  RandomTransfer.h  RandomTransferInfoList.cpp  RandomTransferInfoList.h  ReadJob.cpp  ReadJob.h  SequentialTransferInfoList.cpp  SequentialTransferInfoList.h  SpewConsole.cpp  SpewConsole.h  SpewDisplay.cpp  SpewDisplay.h  SpewProgressRow.cpp  SpewProgressRow.h  (+40 more)
