## Process this file with automake to produce Makefile.in

SUBDIRS = src man etc
EXTRA_DIST = config/config.guess \
             config/config.sub \
             config/install-sh \
             config/missing \
             config/mkinstalldirs \
             FAQ \
	     TODO \
             etc/spew.conf

